# narradar

./: .gitignore  .gitmodules  ArgumentFiltering.hs  DPairs.hs  LICENSE  Main.hs  MainWeb.hs  MonadSupply.hs  NarrowingProblem.hs  Problem.hs  README  Signature.hs  Terms.hs  Testing.hs  Testing2.hs  Types.hs  example.hs  narradar.cabal  nterm.hs  sandbox-sources  sandbox.sh
aproveStrats/: narradar.strategy  reductionPair.strategy
c_bits/: rts.c
examples/: append.pl  bug.trs  chains.trs  counter-labelling-constructors.pl  counter-labelling-constructors.trs  counterLL.trs  counterLL2.trs  counterexample.pl  counternaoki.trs  default.trs  default2.trs  der.trs  evenodd.pl.trs  fac-subproblem.trs  fac.trs  facn.trs  facneg.trs  facsub1.trs  fullpolicy.trs  german.trs  impossiblelpo.trs  incomplete.trs  incomplete1.trs  intlist-play.pl.trs  intlist-types.pl.trs  invy14ipl_1.trs  len.pl  len.trs  lopstr09.trs  minimal.pl  minimality.trs  minimality2.trs  naoki.trs  narr2.trs  newexample.trs  nontrat.trs  peano1.trs  peanocgi.trs  peanon.trs  preLOPSTR.trs  (+27 more)
examples/rthiemann/: 31.trs  316.trs  317.trs  318.trs  320.trs  321.trs  322.trs  322d5.trs  327.trs  327b.trs  329.trs  330.trs  330b.trs  333.trs  51.trs  520.trs  521.trs  54.trs
forks/dotgen-0.3.1/: dotgen.cabal
forks/dotgen-0.3.1/Text/: Dot.hs
resources/: form.html
scripts/: narradar.js  thickbox.js
src/: Aprove.hs  ArgumentFiltering.hs  Bottom.hs  DPairs.hs  ExtraVars.hs  GraphTransformation.hs  GraphViz.hs  Identifiers.hs  LOPSTR09web.hs  Lattice.hs  Main.hs  MainWeb.hs  Narradar.hs  NarrowingProblem.hs  Operad.hs  Output.hs  Problem.hs  Problem.hs-boot  Prolog.hs  PrologProblem.hs  Proof.hs  Propositional.hs~  Signature.hs  Solver.hs  TaskPoolSTM.hs  Types.hs  Types.hs-boot  UsableRules.hs  Utils.hs
src/Control/Monad/: Free.hs  MonadSupply.hs  Operad.hs  Supply.hs
src/Control/Monad/Free/: Narradar.hs
src/Data/: Functor1.hs  NarradarTrie.hs  UniqueList.hs
src/Data/Functor/: Two.hs
src/Language/Prolog/: TypeChecker.hs
src/Narradar/: Aprove.hs  ArgumentFiltering.hs  Bottom.hs  Convert.hs  DPIdentifiers.hs  DPairs.hs  Examples.hs  ExtraVars.hs  Framework.hs  Goal.hs  GraphTransformation.hs  GraphViz.hs  Labellings.hs  Main.hs  NarrowingProblem.hs  Output.hs  Ppr.hs  Problem.hs  ProblemType.hs  PrologIdentifiers.hs  PrologProblem.hs  Proof.hs  Propositional.hs  ReductionPair.hs  RewritingProblem.hs  Solver.hs  TRS.hs  Term.hs  Types.hs  Unify.hs  UsableRules.hs  Utils.hs  Var.hs
src/Narradar/Constraints/: Confluence.hs  ICap.hs  Modularity.hs  RPO.hs  Syntactic.hs  Unify.hs  UsableRules.hs  VariableCondition.hs
src/Narradar/Constraints/SAT/: Combinators.hs  Common.hs  Examples.hs  MPO.hs  MonadSAT.hs  Orderings.hs  RPO.hs  RPOAF.hs  RPOCircuit.hs  SBVCircuit.hs  Solve.hs  Usable.hs  WPO.hs  YicesCircuit.hs  YicesFFICircuit.hs  Z3Circuit.hs
src/Narradar/Constraints/SAT/RPOAF/: Symbols.hs
src/Narradar/Framework/: Constraints.hs  GraphViz.hs  Observe.hs  Output.hs  Ppr.hs  Proof.hs
src/Narradar/Interface/: Cgi.hs  Cli.hs
src/Narradar/Processor/: Aprove.hs  ExtraVariables.hs  ExtraVars.hs  FLOPS08.hs  Graph.hs  GraphTransformation.hs  InfinitaryProblem.hs  InitialGoal.hs  InitialGoalNarrowingProblem.hs  InnermostProblem.hs  LOPSTR09.hs  NarrowingProblem.hs  NonDP.hs  PrologProblem.hs  QRewriting.hs  RPO.hs  ReductionPair.hs  RelativeProblem.hs  RelativeProblemIPL14.hs  RewritingProblem.hs  SubtermCriterion.hs  UsableRules.hs  WPO.hs
src/Narradar/Processor/RPO/: SBV.hs  Yices.hs  YicesPipe.hs  Z3.hs
src/Narradar/Processor/WPO/: SBV.hs  YicesPipe.hs  Z3.hs
src/Narradar/Types/: ArgumentFiltering.hs  DPIdentifiers.hs  DPairs.hs  Goal.hs  Labellings.hs  Problem.hs  ProblemType.hs  PrologIdentifiers.hs  Signature.hs  TRS.hs  Term.hs  Var.hs
src/Narradar/Types/Problem/: Infinitary.hs  InitialGoal.hs  Narrowing.hs  NarrowingGen.hs  NarrowingGoal.hs  NonDP.hs  Prolog.hs  QRewriting.hs  Relative.hs  Rewriting.hs
src/Narradar/Utils/: Convert.hs  Html.hs  Memo.hs  Observe.hs  Parse.hs  Ppr.hs
src/Text/ParserCombinators/Parsec/: Tag.hs
strategies/: Common.hs  FLOPS08-inn.hs  FLOPS08-search.hs  ICLP08.hs  ICLP08cli.hs  ICLP08web.hs  IPL14.hs  IPL14q.hs  IPL14q2.hs  LOPSTR-Gen.hs  LOPSTR-Inf.hs  LOPSTR-Inftype.hs  LOPSTR09-lpo.hs  LOPSTR09-mpo.hs  LOPSTR09-new.hs  LOPSTR09.hs  LOPSTR09cli.hs  LOPSTR09web.hs  NV10.hs  NonDP.hs  SGST07-type.hs  SGST07.hs  SGST07cli.hs  SGST07nomin.hs  Strats.hs  Test.hs  example.hs  narr1Typ.hs  narr1Typ2.hs  narrGraph.hs  narrHanus.hs  narrInn.hs  narrInst.hs  narrNoConstructors.hs  narrNoConstructorsOne.hs  narrOut.hs  narrOutInf.hs  narrOutOne.hs  narrOutPos.hs  narrOutU1.hs  (+11 more)
style/: narradar.css
test/: Generators.hs  Properties.hs  Templates.hs  Test-Gen.hs  Test-Infinitary.hs  generators.hs  templates.hs
wordpress-theme/: footer.php  header.php  sidebar.php  style.css
