name:                narradar
build-type:          Simple
cabal-version:       >= 1.8
version:             0.3
synopsis:            A termination of Narrowing prover
description:         A termination of Narrowing prover
category:            Math
license:             BSD3
license-file:        LICENSE
author:              Jose Iborra
maintainer:          pepeiborra@gmail.com
data-files:          aproveStrats/*.strategy
		     resources/form.html
extra-source-files:  prelude.pl
source-repository head
  type:     git
  location: git://github.com/pepeiborra/narradar.git


Flag base4
   default: True
Flag cli
   description: build the command line interface using the default strategy
   default: True
Flag cgi
   description: include the Cgi driver
   default: False
Flag debug
   default: False
Flag tests
   default: False
Flag hood
   default: False
Flag aprove
   description: include the Aprove processor in the build
   default: False

Library
  if flag(base4)
     cpp-options: -DBASE4
     build-depends:     base >= 4
  else
     build-depends:     base < 4
  if flag(debug)
     cpp-options: -DDEBUG
  if flag(tests)
     cpp-options: -DTESTING
     build-depends: parse-dimacs, test-framework, test-framework-quickcheck2, QuickCheck > 2 && < 3
     hs-source-dirs: test
     other-modules: Properties
     -- ghc-options: -fhpc
  if flag(hood)
     cpp-options: -DHOOD
     build-depends: hood
  else
     build-depends: hood-off

  buildable: True
--  cpp-options: -DGHCI
  ghc-options:  -O2
  ghc-prof-options: -auto-all
  hs-source-dirs: src
  extensions:   FlexibleContexts,
                FlexibleInstances,
                OverlappingInstances,
                UndecidableInstances,
                ScopedTypeVariables,
                PatternGuards,
                ViewPatterns,
                RecordWildCards,
                NamedFieldPuns,
                TypeOperators,
                MultiParamTypeClasses,
                DeriveFunctor

  extra-libraries: yices

  build-Depends:  base,
                  mtl >= 2.1.3.1,
                  failure ,
                  prettyclass,
                  array,
                  containers >= 0.4.2, 
                  process, 
                  directory,
                  bytestring,
                  GraphSCC, 
                  bimap,
                  bytestring-trie,
                  xhtml, 
                  timeit,
                  filepath, 
                  deepseq,
                  strict, 
                  fgl,
                  parallel > 2,
                  parsec > 3, 
                  unix, 
                  template-haskell,
                  control-monad-free >= 0.5.3, 
                  logict, 
                  rmonad >= 0.8.0.3, 
                  suitable >= 0.1.2,
                  split,
--                  parse-dimacs,
                  yices > 0.0.0.8,
                  bindings-yices >= 0.2,
                  narradar-alacarte >= 0.6,
                  narradar-funsat-lang >= 0.8, 
                  narradar-funsat-rpo >= 0.3.1,
                  narradar-term >= 0.3.1,
                  narradar-trsparser >= 0.4.3, 
                  narradar-prolog >= 0.3,
                  narradar-prolog-tools >= 0.3,
                  muterm-framework >= 1.5.3,
                  muterm-framework-charts >= 0.3.1,
                  hashable,
                  hashmap,
                  suitable,
                  bifunctors


  if flag(aprove)
    build-depends:network, 
                  tagsoup
    exposed-modules:
     Narradar.Processor.Aprove
--   Narradar.Processor.ReductionPair,
     Text.ParserCombinators.Parsec.Tag

  if flag(cgi)
    build-depends:   safe-failure, cgi >= 3001.1.8.6, file-embed, dataenc
    exposed-modules: Narradar.Interface.Cgi

  exposed-modules:
     Narradar,
     Narradar.Interface.Cli,
     Narradar.Constraints.ICap,
     Narradar.Constraints.UsableRules,
     Narradar.Constraints.Unify,
     Narradar.Constraints.Modularity,
     Narradar.Constraints.VariableCondition,
     Narradar.Constraints.RPO,
     Narradar.Constraints.SAT.MonadSAT,
     Narradar.Constraints.SAT.Solve,
     Narradar.Constraints.SAT.YicesCircuit,
     Narradar.Constraints.SAT.YicesFFICircuit,
     Narradar.Constraints.SAT.RPOAF,
     Narradar.Constraints.SAT.RPOAF.Symbols,
     Narradar.Constraints.Syntactic,
     Narradar.Examples,
     Narradar.Framework,
     Narradar.Framework.GraphViz
     Narradar.Framework.Ppr,
     Narradar.Types,
     Narradar.Types.ArgumentFiltering,
     Narradar.Types.DPIdentifiers,
     Narradar.Types.PrologIdentifiers
     Narradar.Types.Goal,
     Narradar.Types.Labellings,
     Narradar.Types.Problem,
     Narradar.Types.Problem.Prolog,
     Narradar.Types.Problem.Rewriting,
     Narradar.Types.Problem.Narrowing,
     Narradar.Types.Problem.NarrowingGen,
     Narradar.Types.Problem.NarrowingGoal,
     Narradar.Types.Problem.Relative,
     Narradar.Types.Problem.InitialGoal,
     Narradar.Types.Problem.Infinitary,
     Narradar.Types.Term,
     Narradar.Types.TRS,
     Narradar.Types.Var,
     Narradar.Processor.ExtraVariables,
     Narradar.Processor.Graph,
     Narradar.Processor.GraphTransformation,
     Narradar.Processor.NarrowingProblem,
--     Narradar.Processor.InitialGoalNarrowingProblem,
     Narradar.Processor.InfinitaryProblem,
     Narradar.Processor.RPO
--     Narradar.Processor.RPOFunsat
     Narradar.Processor.UsableRules,
     Narradar.Processor.InnermostProblem,
     Narradar.Processor.PrologProblem,
     Narradar.Processor.RelativeProblem,
     Narradar.Processor.RelativeProblemIPL14,
     Narradar.Processor.SubtermCriterion,
     Narradar.Processor.FLOPS08,
     Narradar.Processor.LOPSTR09,
     Narradar.Utils,
     Narradar.Utils.Html,
     Narradar.Utils.Parse,
--     Data.NarradarTrie,
     Control.Monad.Supply,
     Lattice
  other-modules:
     Data.UniqueList,
     Paths_narradar

Executable NARRADAR
  if flag(cli)
    buildable: True
  else
    buildable: False
  hs-source-dirs:  strategies
  main-is:         LOPSTR09.hs
  ghc-options:     -threaded
  build-depends:   base, narradar, muterm-framework, narradar-prolog
  cpp-options:     -DTHREADED



