name:                narradar
build-type:          Simple
cabal-version:       >= 1.8
version:             0.3
synopsis:            A termination of Narrowing prover
description:         A termination of Narrowing prover
category:            Math
license:             BSD3
license-file:        LICENSE
author:              Jose Iborra
maintainer:          pepeiborra@gmail.com
data-files:          aproveStrats/*.strategy
		     resources/form.html
extra-source-files:  prelude.pl
source-repository head
  type:     git
  location: git://github.com/pepeiborra/narradar.git


Flag base4
   default: True
Flag cli
   description: build the command line interface using the default strategy
   default: False
Flag cgi
   description: include the Cgi driver
   default: False
Flag debug
   default: False
Flag tests
   default: False
Flag hood
   default: False
Flag aprove
   description: include the Aprove processor in the build
   default: False
Flag rpo
   description: include the RPO processor in the build
   default: True
Flag wpo
   description: include the WPO processor in the build
   default: True
Flag yices
   description: include processors that use the Yices SMT solver via FFI to solve SAT constraints
   default: False
Flag yices-smt
   description: include processors that use the Yices SMT solver via SMT to solve SAT constraints
   default: False
Flag z3
   description: include processors that use the Z3 SMT solver to solve SAT constraints
   default: False
Flag sbv
   description: include processors that use SBV to solve SAT constraints
   default: True

Library
  ghc-options: -j
  
  if flag(base4)
     cpp-options: -DBASE4
     build-depends:     base >= 4
  else
     build-depends:     base < 4
  if flag(debug)
     cpp-options: -DDEBUG
  if flag(tests)
     cpp-options: -DTESTING
     build-depends: parse-dimacs, test-framework, test-framework-quickcheck2, QuickCheck > 2 && < 3
     hs-source-dirs: test
     other-modules: Properties
     -- ghc-options: -fhpc
  if flag(hood)
     cpp-options: -DHOOD

  if flag(rpo) || flag(wpo)
     build-depends:  narradar-funsat-rpo >= 0.4
     exposed-modules: 
       Narradar.Constraints.SAT.MonadSAT
       Narradar.Constraints.SAT.Usable
       Narradar.Constraints.SAT.Orderings
       Narradar.Processor.RPO

  if flag(rpo)
     exposed-modules: 
       Narradar.Constraints.SAT.RPOAF

  if flag(wpo)
     exposed-modules: 
       Narradar.Processor.WPO,
       Narradar.Constraints.SAT.WPO

  if flag(yices) && flag(rpo)
     extra-libraries: yices
     exposed-modules:
       Narradar.Processor.RPO.Yices,
       Narradar.Constraints.SAT.YicesFFICircuit
     build-depends: bindings-yices >= 0.3

  if flag(yices-smt)
     exposed-modules:
       Narradar.Constraints.SAT.YicesCircuit
     build-depends: yices >= 0.0.0.12.1
  if flag(yices-smt) && flag(rpo)
     exposed-modules:
       Narradar.Processor.RPO.YicesPipe
  if flag(yices-smt) && flag(wpo)
     exposed-modules:
       Narradar.Processor.WPO.YicesPipe
     
  if flag(z3)
     build-depends: z3 > 0.3.2, lens-family-core
     exposed-modules:
      Narradar.Constraints.SAT.Z3Circuit

  if flag(z3) && flag(rpo)
     exposed-modules:
      Narradar.Processor.RPO.Z3

  if flag(z3) && flag(wpo)
     exposed-modules:
      Narradar.Processor.WPO.Z3

  if flag(sbv)
     build-depends: sbv >= 5.0
     exposed-modules:
      Narradar.Constraints.SAT.SBVCircuit

  if flag(sbv) && flag(rpo)
     exposed-modules:
      Narradar.Processor.RPO.SBV

  if flag(sbv) && flag(wpo)
     exposed-modules:
      Narradar.Processor.WPO.SBV

  buildable: True
--  cpp-options: -DGHCI
  ghc-options:
  ghc-prof-options: -fprof-auto-calls
  hs-source-dirs: src
  extensions:   FlexibleContexts,
                FlexibleInstances,
                OverlappingInstances,
                UndecidableInstances,
                ScopedTypeVariables,
                PatternGuards,
                ViewPatterns,
                RecordWildCards,
                NamedFieldPuns,
                TypeOperators,
                MultiParamTypeClasses,
                DeriveFunctor,
                DeriveDataTypeable,
                DeriveGeneric,
                ConstraintKinds
                
  build-Depends:  base,
                  transformers >= 0.3,
                  mtl >= 2.1.3.1,
                  failure ,
                  pretty,
                  array,
                  containers >= 0.4.2, 
                  process, 
                  directory,
                  bytestring,
                  GraphSCC, 
                  bimap,
                  bytestring-trie,
                  xhtml, 
                  timeit,
                  filepath, 
                  deepseq,
                  deepseq-generics,
                  deepseq-extras,
                  strict, 
                  fgl,
                  parallel > 2,
                  parsec > 3, 
                  unix, 
                  template-haskell,
                  control-monad-free >= 0.5.3, 
                  control-monad-free-extras,
                  logict, 
                  rmonad >= 0.8.0.3, 
                  suitable >= 0.1.2,
                  split,
--                  parse-dimacs,
                  narradar-alacarte >= 0.6,
                  narradar-funsat-lang >= 0.8, 
                  narradar-term >= 0.3.4,
                  narradar-trsparser >= 0.4.3, 
                  narradar-prolog >= 0.3,
                  narradar-prolog-tools >= 0.3,
                  muterm-framework >= 1.6.2.1,
                  muterm-framework-charts >= 0.3.1,
                  hashable,
                  hashmap,
                  suitable,
                  bifunctors,
                  hoed-mini, hoed-extras,
                  prelude-extras,
                  constrained-normal,
                  constraints,
                  applicative-extras,
                  tpdb >= 0.9.8,
                  hxt

  if flag(aprove)
    build-depends:network, 
                  tagsoup
    exposed-modules:
     Narradar.Processor.Aprove
--   Narradar.Processor.ReductionPair,
     Text.ParserCombinators.Parsec.Tag

  if flag(cgi)
    build-depends:   safe-failure, cgi >= 3001.1.8.6, file-embed, dataenc
    exposed-modules: Narradar.Interface.Cgi

  exposed-modules:
     Narradar,
     Narradar.Interface.Cli,
     Narradar.Constraints.ICap,
     Narradar.Constraints.UsableRules,
     Narradar.Constraints.Unify,
     Narradar.Constraints.Modularity,
     Narradar.Constraints.VariableCondition,
     Narradar.Constraints.Confluence,
     Narradar.Constraints.Syntactic,
--     Narradar.Examples,
     Narradar.Framework,
     Narradar.Framework.GraphViz
     Narradar.Framework.Observe,
     Narradar.Framework.Constraints,
     Narradar.Framework.Ppr,
     Narradar.Types,
     Narradar.Types.ArgumentFiltering,
     Narradar.Types.DPIdentifiers,
     Narradar.Types.PrologIdentifiers
     Narradar.Types.Goal,
     Narradar.Types.Labellings,
     Narradar.Types.Problem,
     Narradar.Types.Problem.NonDP,
     Narradar.Types.Problem.Prolog,
     Narradar.Types.Problem.Rewriting,
     Narradar.Types.Problem.QRewriting,
     Narradar.Types.Problem.Narrowing,
     Narradar.Types.Problem.NarrowingGen,
     Narradar.Types.Problem.NarrowingGoal,
     Narradar.Types.Problem.Relative,
     Narradar.Types.Problem.InitialGoal,
     Narradar.Types.Problem.Infinitary,
     Narradar.Types.Term,
     Narradar.Types.TRS,
     Narradar.Types.Var,
     Narradar.Processor.ExtraVariables,
     Narradar.Processor.NonDP,
     Narradar.Processor.Graph,
     Narradar.Processor.GraphTransformation,
     Narradar.Processor.NarrowingProblem,
--     Narradar.Processor.InitialGoalNarrowingProblem,
     Narradar.Processor.InfinitaryProblem,
     Narradar.Processor.QRewriting,
--     Narradar.Processor.RPOFunsat
     Narradar.Processor.UsableRules,
     Narradar.Processor.InnermostProblem,
     Narradar.Processor.PrologProblem,
     Narradar.Processor.RelativeProblem,
     Narradar.Processor.RelativeProblemIPL14,
     Narradar.Processor.SubtermCriterion,
     Narradar.Processor.FLOPS08,
     Narradar.Processor.LOPSTR09,
     Narradar.Processor.InitialGoal,
     Narradar.Utils,
     Narradar.Utils.Memo,
     Narradar.Utils.Html,
     Narradar.Utils.Parse,
--     Data.NarradarTrie,
     Control.Monad.Supply,
     Data.Functor.Two,
     Data.Functor1,
     Lattice
  other-modules:
     Data.UniqueList,
     Paths_narradar

Executable NARRADAR
  if flag(cli)
    buildable: True
  else
    buildable: False
  hs-source-dirs:  strategies
  main-is:         LOPSTR09.hs
  ghc-options:     -threaded
  build-depends:   base, narradar, muterm-framework, narradar-prolog
  cpp-options:     -DTHREADED



